deploy/manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-apiserver-template
spec:
  selector:
    matchLabels:
      app: go-apiserver-template
  template:
    metadata:
      labels:
        app: go-apiserver-template
    spec:
      containers:
      - name: go-apiserver-template
        image: poneding/go-apiserver-template
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /app/config.yaml
          subPath: config.yaml
          readOnly: true
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: config
        configMap:
          name: go-apiserver-template-config
---
apiVersion: v1
kind: Service
metadata:
  name: go-apiserver-template
spec:
  selector:
    app: go-apiserver-template
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-apiserver-template
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: nginx-gateway
    sectionName: wildcard-ketches-http
  hostnames:
  - "demo-01.ketches.cn"
  rules:
  - backendRefs:
    - name: go-apiserver-template
      port: 8080
